fixed some styling on mobile after device test

--- a/src/style.scss
+++ b/src/style.scss
@@ -884,8 +884,7 @@ transform: matrix3d(0.77,0,0.64,.001,0.00,1,0.00,0,-0.64,0,0.77,0,0,0,0,1);
 #skills {
 display: flex;
 justify-content: center;
-margin-top: 9rem;
-gap: 8rem;
+margin: 9rem 2rem 2rem;
 }
 
 .skills-wrapper {
@@ -964,7 +963,7 @@ gap: 8rem;
   }
 }
 .icon-wrapper img {
-  width: 60%;
+  width: 50%;
   height: auto;
 }
 .contact-text {
@@ -979,7 +978,7 @@ gap: 8rem;
     }
    }
    .email img {
-    width: 3rem;
+    width: 2rem;
   }
 
 .copyright-wrapper {
@@ -1212,6 +1211,7 @@ nav ul {
 
 }
 }
+//----------ANIMATION FOR HAMBURGER-------//
 @keyframes line1 {
   0% {
       transform: translateY(0px) rotate(0deg);
@@ -1268,4 +1268,70 @@ nav ul {
      margin-right: 5rem;
    }
   }
+}
+@media only screen and (max-width: 400px) {
+  body {
+    font-size: 85%;
+  }
+.mh-title {
+  font-size: 0.7rem;
+  letter-spacing: 0.25rem;
+}
+.mh-description {
+    font-size: xx-small;
+    & .brackets {
+      display: none;
+    }
+  }
+  #landing-page-hero {
+  h1 {
+    font-size: 1.2rem;
+  }
+}
+.scroll-mark-wrapper {
+  position: relative;
+  top: -2rem;
+}
+.hero-intro {
+  line-height: 1.8rem;
+  gap: 0.5rem;
+  width: 87%;
+  gap: unset;
+  margin-bottom: 0;
+
+  & p {
+    line-height: 1.2rem;
+  }
+}
+  img {
+    width: 80%;
+    height: auto;
+  }
+ #portfolio, #skills {
+   margin-left: unset;
+   margin-top: 5rem;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+ }
+ .project-info {
+   font-size: 0.7rem;
+    h5 {
+      font-size: 1.2rem;
+    }
+ }
+ .project-img-wrapper {
+   width: 320px;
+   height: auto;
+ }
+  .contact-text {
+  font-size: 0.7rem;
+  .email {
+    margin-top: 0.2rem;
+  }
+  img {
+    display: none;
+  }
+}
 }
